[package]
name = "hashing"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
light-poseidon = "0.3.0"
mimc-rs = "0.0.2"
ed25519-dalek = { version="2.1.1", features = ['serde'] }
p256 = { version="0.13.2", features = ['serde'] }
rand_core = "0.6.4"
sha2 = "0.10.8"
tiny-keccak = { version = "2.0.0", features = ['keccak'] }
